SERVER-130821 Fix inclusion of subfields after base modification (#57930)

GitOrigin-RevId: 444b24cc2c8aad2f175d21983f7cfbb98b9e64a8